--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<h1>Hello,1992</h1>
+<p>
+	<span style="background-color:#E56600;">hello，welcome to 1992.design</span>
+</p>
+<p>
+	<span style="background-color:#E56600;"><br />
+</span>
+</p>
+<p>
+	<span style="background-color:#E56600;"><br />
+</span>
+</p>
