--- a/index.html
+++ b/index.html
@@ -53,31 +53,46 @@
 	<br />
 </p>
 <p style="text-align:center;">
-	<span><b>天</b></span>
+	<span style="font-size:16px;"><b>天</b></span> 
 </p>
 <p style="text-align:center;">
-	<span><b>下</b></span>
+	<span style="font-size:16px;"><b>下</b></span> 
 </p>
 <p style="text-align:center;">
-	<span><b>无</b></span>
+	<span style="font-size:16px;"><b>无</b></span> 
 </p>
 <p style="text-align:center;">
-	<span><b>双</b></span>
+	<span style="font-size:16px;"><b>双</b></span> 
 </p>
 <p style="text-align:center;">
-	<b><span style="background-color:;">，</span></b>
+	<b><span style="font-size:16px;">，</span></b> 
 </p>
 <p style="text-align:center;">
-	<b><span style="background-color:;">何</span></b>
+	<b><span style="font-size:16px;">何</span></b> 
 </p>
 <p style="text-align:center;">
-	<b><span style="background-color:;">足</span></b>
+	<b><span style="font-size:16px;">足</span></b> 
 </p>
 <p style="text-align:center;">
-	<b><span style="background-color:;">挂</span></b>
+	<b><span style="font-size:16px;">挂</span></b> 
 </p>
 <p style="text-align:center;">
-	<b><span style="background-color:;">齿</span></b>
+	<b><span style="font-size:16px;">齿</span></b> 
+</p>
+<p style="text-align:center;">
+	<br />
+</p>
+<p style="text-align:center;">
+	<br />
+</p>
+<p style="text-align:center;">
+	<br />
+</p>
+<p style="text-align:center;">
+	<br />
+</p>
+<p style="text-align:center;">
+	<br />
 </p>
 <p style="text-align:center;">
 	<br />
